--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ distlib==0.3.8
 dnspython==2.6.1
 filelock==3.15.4
 Flask==3.0.3
+gunicorn==22.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+packaging==24.1
 platformdirs==4.2.2
 pymongo==4.8.0
 virtualenv==20.26.3
