--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ mpmath==1.3.0
 packaging==24.2
 pymongo==4.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 six==1.16.0
 sympy==1.13.3
 Werkzeug==3.0.4
