syncing with frontend dev. DEPLOYMENT!!

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ URI='mongodb+srv://ryandoesnothing1:0wt60G4Vv2e3fv0u@firstvisionary.06rzakp.mong
 DB_NAME='main'
 CATEGORY_COLL='categories'
 QUESTIONS_COLL='questions'
+USERS_COLL='users'
+JWT_KEY='ispoke2soon'
+JWT_EXPIRES_IN=90
+LOCALHOST='http://localhost:5173'
+PRODUCTION='https://main.d2ol3fnyw1r498.amplifyapp.com'
