--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.4
 MarkupSafe==3.0.0
 mpmath==1.3.0
 packaging==24.2
+PyJWT==2.10.1
 pymongo==4.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
