CORS for production

--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ USERS_COLL='users'
 JWT_KEY='ispoke2soon'
 JWT_EXPIRES_IN=90
 LOCALHOST='http://localhost:5173'
-PRODUCTION='https://main.d2ol3fnyw1r498.amplifyapp.com'
+PRODUCTION_AWS='https://main.d2ol3fnyw1r498.amplifyapp.com'
+PRODUCTION_RENDER='https://question-generator-f.onrender.com'
